# swproject

./: .gitignore  Comments on subreddit  Comments sentiment analysis.csv  Commentssubreddit.csv  OppenheimerCommentsAnalysis.csv  Subreddit comments.csv  Top Posts Oppenheimer.csv  Top Posts.csv  TopPostsOppenheimer.csv  hello.py  postscraping.py  pyproject.toml  reddit_scraping.py  reddit_sentiment.py  requirement.txt  scrapetest.py  sentiment_analysis.py  sentimentanalysiscomments.py  simple_scraping.py  test2.py
.github/workflows/: ci_pipeline.yml  python-app.yml  testing_pipeline.yml
