[tool.poetry]
name = "swproject"
version = "0.1.0"
description = ""
authors = ["Wanda Handal <wanda.handal@gmail.com>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.0"

[tool.poetry.scripts]
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
