[tool.poetry]
name = "swproject"
version = "0.1.0"
description = ""
authors = ["Wanda Handal <wanda.handal@gmail.com>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.0"
praw = "^7.7.1"
numpy = { version = "^1.26.0", python = ">=3.9,<3.13" }
pandas = "^1.0.0"
vadersentiment = "^3.3.2"
textblob = "^0.17.1"

[tool.poetry.scripts]
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
